# hdf5-lite

./: .gitignore  .travis.yml  README.md  hdf5-lite.cabal  makefile  setup-hdf5.sh  stack.yaml
src/Data/: HDF5.hs
src/Data/HDF5/: Lite.hs  Store.hs
src/Data/HDF5/Internal/: Exceptions.hs  Types.chs
src/Data/HDF5/Lite/: Internal.hs
src/Data/HDF5/Lite/Internal/: InlineC.hs
src/Data/HDF5/Lite/Internal/InlineC/: Context.hs
test/: LibSpec.hs
