name:                hdf5-lite
version:             0.1.0.0
synopsis:            Bindings to the HDF5 "lite" interface
-- description:
homepage:            https://github.com/ocramz/hdf5-lite
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          zocca.marco gmail
copyright:           2018 Marco Zocca
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.2.2

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  include-dirs:        /usr/local/hdf5/include
  exposed-modules:     Data.HDF5
                       Data.HDF5.Lite
                       Data.HDF5.Lite.Internal
                       Data.HDF5.Internal.Types
  -- c-sources:           src/Data/HDF5/Lite/Internal/Types.c
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , ghc-prim
                     , inline-c
                     , primitive
                     , text
                     , template-haskell
                     , vector
                     -- , bytestring

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hdf5-lite
                     , hspec
                     , QuickCheck

source-repository head
  type:     git
  location: https://github.com/ocramz/hdf5-lite
