name:                hdf5-lite
version:             0.1.1.0
synopsis:            High-level bindings to the HDF5 "lite" interface
description:         This library wraps the simplified ("lite") interface to the HDF5 data format.
homepage:            https://github.com/ocramz/hdf5-lite
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          zocca.marco gmail
copyright:           2018 Marco Zocca
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.2.2

library
  default-language:    Haskell2010
  ghc-options:         -Wall -dynamic
  hs-source-dirs:      src
  include-dirs:        /usr/local/hdf5/include
  exposed-modules:     Data.HDF5.Lite
                       Data.HDF5.Lite.Internal
                       Data.HDF5.Internal.Exceptions
                       Data.HDF5.Internal.Types
                       Data.HDF5.Store
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , exceptions
                     , ghc-prim
                     , inline-c
                     , primitive
                     , text
                     , template-haskell
                     , vector
                     -- , bytestring
  build-tools:       c2hs -any
  extra-lib-dirs:    /usr/local/hdf5/lib
  extra-libraries:   hdf5

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall -dynamic
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             LibSpec.hs
  build-depends:       base
                     , hdf5-lite
                     , hspec
                     , QuickCheck
                     , vector
  extra-lib-dirs:    /usr/local/hdf5/lib
                     src/Data/HDF5/
                     src/Data/HDF5/Lite/

source-repository head
  type:     git
  location: https://github.com/ocramz/hdf5-lite
